# rumqtt

./: .dockerignore  .editorconfig  .eslintignore  .eslintrc  .gitattributes  .gitignore  .markdownlint.json  .markdownlintignore  .prettierignore  .prettierrc  .swp  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CROSSCOMPILE.md  Cargo.toml  Cross.toml  Dockerfile  Dockerfile.rumqttd  LICENSE  README.md  build_rumqttd_docker.sh  cspell.json  mosquitto.conf  package-lock.json  package.json  performance.md  rumqd.conf  rustfmt.toml  tsconfig.json
async-byteorder/: Cargo.toml  LICENSE-MIT  README.md  azure-pipelines.yml
async-byteorder/src/: lib.rs
async-byteorder/tests/: lib.rs
base/: Cargo.toml
base/examples/: connection.rs  events.rs  events_throughput.rs  throughput.rs
base/src/: block.rs  events.rs  lib.rs  messages.rs  xchg.rs
benchmarks/: Cargo.toml  README.md  benchmarks.txt  clients.sh  common.rs  go.mod  go.sum  mesh.rs  paho.go  paho.rs  pahoasync.rs  pahosync.rs  plot.go  plot.py  plot2.py  routernxn.rs  rumqttasync.rs  rumqttasyncbulk.rs  rumqttasyncqos0.rs  rumqttsync.rs  rumqttsyncqos0.rs
benchmarks/clients/: clients.sh  common.rs  mesh.rs  paho.go  pahoasync.rs  pahosync.rs  rumqttasync.rs  rumqttasyncqos0.rs  rumqttsync.rs
benchmarks/parsers/: common.rs  mqttbytes.rs  nats.rs  parsers.sh  v4.rs  v5.rs
benchmarks/results/: benchmarks.html  clients.txt  parsers.txt
benchmarks/simplerouter/: Cargo.toml
mqtt4bytes/: Cargo.toml  README.md  benchthis.txt  diff.txt  new.txt
mqtt4bytes/benches/: bench.rs
mqtt4bytes/src/: codec.rs  lib.rs  packetbytes.rs  packets.rs  read.rs  topic.rs  write.rs
mqtt4bytes/tests/: smoke.rs
mqtt5bytes/: Cargo.toml  README.md
mqtt5bytes/examples/: publish.rs  pubsub.rs
mqtt5bytes/src/: lib.rs  read.rs  topic.rs
mqttbytes/: Cargo.toml  README.md
mqttbytes/src/: lib.rs  read.rs  topic.rs
mqttbytes/tests/: smoke.rs
protocol/: Cargo.toml
protocol/benches/: connack.rs  disconnect.rs  ping.rs  puback.rs  pubcomp.rs  publish.rs  pubrec.rs  subscribe.rs  unsuback.rs  unsubscribe.rs
rumq-broker/: Cargo.toml  README.md  design.md  discussions.md  rumqd.conf  rustfmt.toml
rumq-broker/src/: actionserver.rs  client.rs  codec.rs  connection.rs  graveyard.rs  http.rs  httppush.rs  httpserver.rs  lib.rs  pushclient.rs  router.rs  rumqd.rs  state.rs  statusclient.rs
rumq-cli/: Cargo.toml
rumq-cli/src/: main.rs
rumq-client/: Cargo.toml  design.md
rumq-client/benchmarks/: Cargo.toml  rumqttasync.rs
rumq-client/certs/: generate.sh
rumq-client/examples/: asyncpubsub.rs  gcloud.rs  pubsub.rs  reconnection.rs  smoke.rs  syncpubsub.rs  syncpubsub_update_host.rs  tls.rs
rumq-client/src/: client.rs  eventloop.rs  lib.rs  network.rs  publish.rs  state.rs
rumq-core/: Cargo.toml  README.md  control  variable
rumq-core/benches/: bench.rs
rumq-core/src/: asyncdeserialize.rs  asyncserialize.rs  codec.rs  deserialize.rs  lib.rs  packets.rs  serialize.rs  topic.rs
rumq-router/: Cargo.toml  design.md
rumq-router/src/: connection.rs  lib.rs  state.rs
rumqttc/: CHANGELOG.md  Cargo.toml  README.md  design.md
rumqttc-ng/: Cargo.toml  DESIGN.md
rumqttc-ng/examples/: basic.rs
rumqttc-ng/src/: eventloop.rs  lib.rs  state.rs
rumqttc/benches/: connect.rs  pubrel.rs  suback.rs
rumqttc/benchmarks/: rumqttasync.rs
rumqttc/certs/: generate.sh
rumqttc/examples/: ack_notif.rs  ack_notif_v5.rs  ack_promise.rs  ack_promise_sync.rs  ack_promise_v5.rs  ack_promise_v5_sync.rs  async_auth.rs  async_auth_oauth.rs  async_auth_scram.rs  async_manual_acks.rs  async_manual_acks_v5.rs  asyncpubsub.rs  asyncpubsub_nodelay.rs  asyncpubsub_v5.rs  asyncpubsub_v5_mocked.rs  auth.rs  basic-publisher.rs  basic-subscriber.rs  bug.rs  new_pub.rs  new_pubsub.rs  new_sub.rs  oneshot_pub.rs  oneshot_sub.rs  pkid_promise.rs  pkid_promise_v5.rs  pubrec.rs  serde.rs  subscription_ids.rs  sync_auth.rs  sync_auth_scram.rs  sync_pubsub_weird.rs  sync_topic_alias.rs  syncpubsub.rs  syncpubsub_v5.rs  syncrecv.rs  syncrecv_v5.rs  tls.rs  tls2.rs  tls3.rs  (+7 more)
rumqttc/src/: broker.rs  client.rs  ds.rs  eventloop.rs  eventloop2.rs  events.rs  framed.rs  helpers.rs  lib.rs  network.rs  new.rs  notice.rs  oneshot.rs  proxy.rs  reconnection_strategy.rs  state.rs  tls.rs  tokens.rs  websockets.rs  xchg.rs
rumqttc/tests/: broker.rs  reliability.rs
rumqttd/: .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  architecture.md  broker.conf  build.rs  build_docker.sh  config.patch  demo.toml  out.txt  rumqttd-1.toml  rumqttd-2.toml  rumqttd-a.toml  rumqttd-b.toml  rumqttd-bridge.toml  rumqttd-bridge1-1.toml  rumqttd-bridge1.toml  rumqttd-bridge2-1.toml  rumqttd-bridge2.toml  rumqttd-c.toml  rumqttd.conf  rumqttd.toml  rumqttd2.conf
rumqttd-ng/: Cargo.toml  Dockerfile  README.md  build_docker.sh  demo.toml  tls.md
rumqttd-ng/examples/: node1.rs  node2.rs  singlenode.rs
rumqttd-ng/src/: main.rs
rumqttd/archived-rumqttlog/: log.txt  timestone.toml
rumqttd/config/: rumqttd.conf  rumqttd0.conf  rumqttd1.conf  rumqttd2.conf
rumqttd/examples/: alerts.rs  async.rs  async_broker.rs  broker.conf  broker.rs  custom_auth.rs  external_auth.rs  graceful_shutdown.rs  meters.rs  multiplenodes.rs  node2.rs  singlenode.rs  stress.rs  subscriptions.rs
rumqttd/scripts/: build.sh  docker.sh
rumqttd/src/: async_locallink.rs  bin.rs  connection.rs  consolelink.rs  lib.rs  link.rs  locallink.rs  main.rs  network.rs  remotelink.rs  remove_me.rs  state.rs  tracker.rs
rumqttdb/: Cargo.toml  LICENSE  README.md
rumqttdb/src/: config.rs  connection.rs  error.rs  lib.rs  options.rs
rumqttdb/tests/: clickhouse.rs  common.rs  docker-compose.yml  influx.rs  setup_influx.sql  setup_timescale.sql  timescale.rs
rumqttlog/: .todos.json  Cargo.toml  README.md  inmemoryread.pb  inmemorywrite.pb  review.txt  routernxn.txt  segment.txt  test.sh
rumqttlog/benches/: bench.rs
rumqttlog/docs/: journal.md  metrics.md
rumqttlog/examples/: inmemoryread.rs  inmemorywrite.rs  log.rs  logs.rs  mesh.rs  routernxn.rs  segment.rs
rumqttmesh/: Cargo.toml  README.md
(+442 files in other folders)
