[workspace]
members = [
  "rumqttc",
  "rumqttd",
  "benchmarks",
  "benchmarks/simplerouter",
]
resolver = "2"

[workspace.package]
rust-version = "1.70.0"
edition = "2021"
repository = "https://github.com/bytebeamio/rumqtt"
license = "Apache-2.0"
authors = ["tekjar <raviteja@bytebeam.io>"]

[profile.dev.build-override]
debug = true

[profile.release]
codegen-units = 1
lto = true
strip = true
