[workspace]
members = [
  "rumqttc",
  "rumqttd",
  "benchmarks",
  "benchmarks/simplerouter",
  "rumqttc-ng",
  "base",
  "protocol"
]
resolver = "2"

[workspace.package]
edition = "2021"
repository = "https://github.com/bytebeamio/rumqtt"
license = "Apache-2.0"
authors = ["tekjar <raviteja@bytebeam.io>"]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
thiserror = "2"
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
tracing-panic = { version = "0.1.2", features = ["capture-backtrace"] }

[profile.dev]
# producing debug info in builds takes up a lot of space on runner, and we
# are currently not using it.
debug = false

[profile.release]
codegen-units = 1
lto = true
strip = true
