[package]
name = "async-byteorder"
version = "0.1.0"
edition = "2018"
authors = ["Jon Gjengset <jon@thesquareplanet.com>"]

readme = "README.md"
description = "Asynchronous library for reading/writing numbers in big-endian and little-endian."
repository = "https://github.com/jonhoo/tokio-byteorder"

keywords = ["byte", "endian", "big-endian", "little-endian", "tokio"]
categories = ["encoding", "parsing", "asynchronous"]

license = "Unlicense OR MIT"

[dependencies]
futures-io = "0.3"
byteorder = "1.3.2"

[dev-dependencies]
async-std = {version = "1", features = ["attributes"]}
