[package]
name = "benchmarks"
version = "0.4.0"
authors = ["tekjar <raviteja@bytebeam.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argh = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
mqttbytes = { path = "../mqttbytes" }
rumqttc = { path = "../rumqttc" }
rumqttlog = { path = "../rumqttlog" }
tokio = { version = "1", features = ["full"] }
futures = { version = "0.3", features = ["compat"] }	
bytes = "1.0"
async-channel = "1.4"
pretty_env_logger = "0.4"
itoa = "0.4"
prost = "0.6"
pprof = { version = "0.3", features = ["flamegraph", "protobuf"] }
# paho-mqtt = { git = "https://github.com/eclipse/paho.mqtt.rust" }
# paho-mqtt = "0.7"

[target.'cfg(not(target_env = "msvc"))'.dependencies]
jemallocator = "0.3"

[[bin]]
name = "rumqttasync"
path = "clients/rumqttasync.rs"


[[bin]]
name = "rumqttasyncqos0"
path = "clients/rumqttasyncqos0.rs"

[[bin]]
name = "rumqttsync"
path = "clients/rumqttsync.rs"

[[bin]]
name = "routernxn"
path = "router/routernxn.rs"

# [[bin]]
# name = "pahosync"
# path = "pahosync.rs"

# [[bin]]
# name = "pahoasync"
# path = "pahoasync.rs"

[[bin]]
name = "v4parser"
path = "parsers/v4.rs"

[[bin]]
name = "v5parser"
path = "parsers/v5.rs"

[[bin]]
name = "natsparser"
path = "parsers/nats.rs"
