[package]
name = "mqtt4bytes"
version = "0.1.4"
readme = "README.md"
authors = ["tekjar <raviteja@bytebeam.io>"]
edition = "2018"
license = "Apache-2.0"
description = "MQTT 4 core serialization and deserialization"

[dependencies]
bytes = { version = "0.5", default-features = false }

[dev-dependencies]
pretty_assertions = "0.6.1"
rand = "0.7"
