[package]
name = "mqtt4bytes"
version = "0.4.0"
readme = "README.md"
authors = ["tekjar <raviteja@bytebeam.io>"]
edition = "2018"
license = "Apache-2.0"
description = "MQTT 4 core serialization and deserialization"
keywords = ["mqtt"]
categories = ["network-programming", "no-std"]

[lib]
bench = false

[dependencies]
bytes = { version = "0.6", default-features = false }

[dev-dependencies]
pretty_assertions = "0.6.1"
rand = "0.7"
criterion = "0.3"

[[bench]]
name = "bench"
harness = false
