[package]
name = "mqtt5bytes"
version = "0.1.1"
authors = ["tekjar <raviteja@bytebeam.io>"]
edition = "2018"
license = "Apache-2.0"
description = "MQTT 5 core serialization and deserialization"
keywords = ["mqtt"]
categories = ["network-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = { version = "1.0", default-features = false }

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
pretty_assertions = "0.6.1"
rand = "0.8"
criterion = "0.3"

