[package]
name = "protocol"
version = "0.1.0"
edition = "2021"
description = "Frames different wire protocol to messages"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base = { path = "../base" }
thiserror.workspace = true
serde.workspace = true
tracing.workspace = true
paste = "1"

[dev-dependencies]
criterion = "0.5.1"
proptest = { version = "1.4.0", features = [
    "alloc",
    "default-code-coverage",
    "hardware-rng",
] }

[[bench]]
name = "connack"
harness = false

[[bench]]
name = "connect"
harness = false

[[bench]]
name = "disconnect"
harness = false

[[bench]]
name = "publish"
harness = false

[[bench]]
name = "pubrec"
harness = false

[[bench]]
name = "pubrel"
harness = false

[[bench]]
name = "suback"
harness = false

[[bench]]
name = "subscribe"
harness = false

[[bench]]
name = "unsuback"
harness = false

[[bench]]
name = "unsubscribe"
harness = false

[[bench]]
name = "ping"
harness = false

[[bench]]
name = "puback"
harness = false

[[bench]]
name = "pubcomp"
harness = false
