[package]
name = "rumq-broker"
version = "0.1.0"
authors = ["tekjar <kraviteza@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["full"] }
tokio-rustls = "0.12"
hyper = "0.13"
futures-util = "0.3"
rumq-core = { path = "../rumq-core" }
derive_more = "0.99"
log = "0.4"
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
