[package]
name = "rumq-broker"
version = "0.1.0-alpha.8"
description = "Library for embeddable mqtt broker"
license = "MIT"
repository = "https://github.com/tekjar/rumq"
authors = ["tekjar <kraviteza@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["full"] }
tokio-util = { version = "0.3", features = ["codec"] }
futures-util = { version = "0.3", features = ["sink"] }
tokio-rustls = "0.13"
rumq-core = { path = "../rumq-core", version = "0.1.0-alpha.8" }
log = "0.4"
serde = { version = "1", features = ["derive"] }
bytes = "0.5"
thiserror = "1.0.15"

[dev-dependencies]
