[package]
name = "rumq-cli"
version = "0.1.0-alpha.5"
description = "Commandline mqtt utilities to replace mosquitto_sub and mosquitto_pub"
license = "MIT"
repository = "https://github.com/tekjar/rumq"
authors = ["tekjar"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["full"] }
structopt = "0.3"
pretty_env_logger = "0.4"
toml = "0.5"
rumq-broker = { path = "../rumq-broker", version = "0.1.0-alpha.5" }
serde = { version = "1", features = ["derive"] }
