[package]
name = "rumq-client"
version = "0.1.0-alpha.4"
description = "An efficeint and robust mqtt client for your connected devices"
license = "MIT"
repository = "https://github.com/tekjar/rumq"
authors = ["tekjar"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_more = "0.15"
tokio = { version = "0.2", features = ["io-util", "tcp", "dns", "sync", "time"] }
async-stream = "0.2"
futures-util = "0.3"
webpki = "0.21"
tokio-rustls = "0.12"
rumq-core = { path = "../rumq-core", version = "0.1.0-alpha.4" }
log = "0.4"
pin-project = "0.4"


[dev-dependencies]
pretty_env_logger = "0.3.1"
color-backtrace = "0.2.3"
crossbeam-channel = "0.4"
serde = {version = "1", features = ["derive"]}
envy = "0.4"
jsonwebtoken = "7.0.0-beta.1"
tokio = { version = "0.2", features = ["full", "macros"] }
