[package]
name = "rumq-core"
version = "0.1.0-alpha.4"
description = "Serializes and deserializes mqtt byte stream"
license = "MIT"
repository = "https://github.com/tekjar/rumq"
authors = ["tekjar"]
edition = "2018"

[dependencies]
derive_more = "0.15"
tokio = { version = "0.2", features = ["io-util"] }
async-trait = "0.1"
byteorder = "1"


[dev-dependencies]
tokio = {version = "0.2", features = ["full", "macros"]}
bencher = "0.1"

[[bench]]
name = "bench"
harness = false
