[package]
name = "rumq-core"
version = "0.1.0-alpha.10"
description = "Serializes and deserializes mqtt byte stream"
license = "MIT"
repository = "https://github.com/tekjar/rumq"
authors = ["tekjar"]
edition = "2018"

[dependencies]
bytes = "0.5"
tokio-util = { version = "0.3", features = ["codec"] }
tokio = { version = "0.2", features = ["io-util"] }
async-trait = "0.1"
byteorder = "1"
thiserror = "1.0.15"

[dev-dependencies]
tokio = {version = "0.2", features = ["full", "macros"]}
