[package]
name = "rumq-router"
version = "0.1.0-alpha.1"
authors = ["tekjar <raviteja@bytebeam.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["full"] }
rumq-core = { path = "../rumq-core", version = "0.1.0-alpha.6" }
derive_more = { version = "0.99", default-features = false, features = ["from"] }
log = "0.4"
