[package]
name = "rumqttc-ng"
version = "0.90.0"
edition.workspace = true
repository.workspace = true
license.workspace = true
authors.workspace = true


[features]
default = ["use-rustls"]
use-rustls = ["dep:tokio-rustls", "dep:rustls-webpki", "dep:rustls-pemfile", "dep:rustls-native-certs"]
use-native-tls = ["dep:tokio-native-tls", "dep:native-tls"]
websocket = ["dep:async-tungstenite", "dep:ws_stream_tungstenite", "dep:http"]
proxy = ["dep:async-http-proxy"]

[dependencies]
base = { path = "../base" }
futures-util = { version = "0.3", default-features = false, features = ["std", "sink"] }
tokio = { version = "1.41", features = ["rt", "macros", "io-util", "net", "time"] }
tokio-util = { version = "0.7", features = ["codec"] }
bytes = "1.5"
log = "0.4"
flume = { version = "0.11", default-features = false, features = ["async"] }
thiserror = "1"
# Optional
# rustls
tokio-rustls = { version = "0.25.0", optional = true }
rustls-webpki = { version = "0.102.2", optional = true }
rustls-pemfile = { version = "2.1.0", optional = true }
rustls-native-certs = { version = "0.7.0", optional = true }
# websockets
async-tungstenite = { version = "0.25.0", default-features = false, features = ["tokio-rustls-native-certs"], optional = true }
ws_stream_tungstenite = { version= "0.13.0", default-features = false, features = ["tokio_io"], optional = true }
http = { version = "1.0.0", optional = true }
# native-tls
tokio-native-tls = { version = "0.3.1", optional = true }
native-tls = { version = "0.2.11", optional = true }
# url
url = { version = "2", default-features = false, optional = true }
# proxy
async-http-proxy = { version = "1.2.5", features = ["runtime-tokio", "basic-auth"], optional = true }
tokio-stream = "0.1.15"
fixedbitset = "0.5.7"
