[package]
name = "rumqttc"
version = "0.23.0"
publish = true
description = "An efficient and robust mqtt client for your connected devices"
keywords = ["mqtt", "iot", "coap", "http"]
categories = ["network-programming"]
rust-version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
authors.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["use-rustls"]
use-rustls = ["dep:tokio-rustls", "dep:rustls-webpki", "dep:rustls-pemfile", "dep:rustls-native-certs"]
use-native-tls = ["dep:tokio-native-tls", "dep:native-tls"]
websocket = ["dep:async-tungstenite", "dep:ws_stream_tungstenite", "dep:http"]
proxy = ["dep:async-http-proxy"]

[dependencies]
futures-util = { version = "0.3", default_features = false, features = ["std"] }
tokio = { version = "1.33", features = ["rt", "macros", "io-util", "net", "time"] }
bytes = "1.5"
log = "0.4"
flume = { version = "0.11", default-features = false, features = ["async"]}
thiserror = "1"

# Optional
# rustls
tokio-rustls = { version = "0.24", optional = true }
rustls-webpki = { version = "0.101.6", optional = true }
rustls-pemfile = { version = "1", optional = true }
rustls-native-certs = { version = "0.6", optional = true }
# websockets
async-tungstenite = { version = "0.23", default-features = false, features = ["tokio-rustls-native-certs"], optional = true }
ws_stream_tungstenite = { version= "0.11", default-features = false, features = ["tokio_io"], optional = true }
http = { version = "0.2", optional = true }
# native-tls
tokio-native-tls = { version = "0.3.1", optional = true }
native-tls = { version = "0.2.11", optional = true }
# url
url = { version = "2", default-features = false, optional = true }
# proxy
async-http-proxy = { version = "1.2.5", features = ["runtime-tokio", "basic-auth"], optional = true }

[dev-dependencies]
bincode = "1.3.3"
color-backtrace = "0.6"
matches = "0.1"
pretty_assertions = "1"
pretty_env_logger = "0.5"
rustls = "0.21"
rustls-native-certs = "0.6"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full", "macros"] }
