[package]
name = "rumqttd-ng"
version = "0.3.0"
authors = ["tekjar <raviteja@bytebeam.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.4.0", features = ["rt", "time", "net", "io-util", "macros"]}
serde = { version = "1.0.125", features = ["derive"] }
serde_json = "1.0.66"
bytes = { version = "1", features = ["serde"] }
flume = "0.10.9"
slab = "0.4.3"
log = "0.4.14"
thiserror = "1.0.24"
tokio-util = { version = "0.7", features = ["codec"] }
tokio-rustls =  "0.23.0"
tokio-native-tls = { version = "0.3", optional = true }
rustls-pemfile = "0.3.0"
webpki = "0.22.0"
tokio-tungstenite = "0.15.0"
ws_stream_tungstenite = "0.8"
websocket-codec = "0.5.1"
rouille = "3.1.1"
x509-parser = "0.9.2"
futures-util = "0.3.16"
parking_lot = "0.11.2"
reqwest = { version = "0.11", features = ["json"] }
figment = { version = "0.10.5", features = ["toml", "env"] }
config = "0.13"
simplelog = "0.12.0"
structopt = "0.3.26"

[features]
native-tls = ["tokio-native-tls"]

[dev-dependencies]
pretty_env_logger = "0.4.0"
jemallocator = "0.3.2"
mqttbytes = "0.6"
config = "0.13"

[build-dependencies]
vergen = "7.4.2"
