[package]
name = "rumqttd"
version = "0.19.0"
publish = true
description = "rumqttd is a high performance MQTT broker written in Rust which is light weight and embeddable"
keywords = ["mqtt", "broker", "iot", "kafka", "nats"]
categories = ["network-programming"]
rust-version = "1.70.0"
edition.workspace = true
repository.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
tokio = { version = "1.36", features = ["rt", "time", "net", "io-util", "macros"]}
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
bytes = { version = "1", features = ["serde"] }
flume = { version = "0.11.0", default-features = false, features = ["async"]}
slab = "0.4.9"
thiserror = "1.0.57"
tokio-util = { version = "0.7", features = ["codec"], optional = true }
tokio-rustls = { version = "0.25.0", optional = true }
rustls-webpki = { version = "0.102.2", optional = true }
tokio-native-tls = { version = "0.3.1", optional = true }
rustls-pemfile = { version = "2.1.0", optional = true }
async-tungstenite = { version = "0.25", default-features = false, features = ["tokio-runtime"], optional = true }
ws_stream_tungstenite = { version= "0.13", default-features = false, features = ["tokio_io"], optional = true }
x509-parser = {version= "0.15.1", optional = true}
futures-util = { version = "0.3.30", optional = true}
parking_lot = "0.12.1"
config = "0.14"
tracing = { version="0.1", features=["log"] }
tracing-subscriber = { version="0.3.18", features=["env-filter"] }
metrics = "0.22.1"
metrics-exporter-prometheus = { version = "0.13.1", default-features = false, features = ["http-listener"] }
clap = { version = "4.4", features = ["derive"] }
axum = "0.7.4"
rand = "0.8.5"
uuid = { version = "1.7.0", features = ["v4", "fast-rng"] }
subtle = "2.5"

[features]
default = ["use-rustls", "websocket"]
use-rustls = ["dep:tokio-rustls", "dep:rustls-webpki", "dep:rustls-pemfile", "dep:x509-parser"]
use-native-tls = ["dep:tokio-native-tls", "dep:x509-parser"]
websocket = ["dep:async-tungstenite", "dep:tokio-util", "dep:futures-util", "dep:ws_stream_tungstenite"]
verify-client-cert = []
validate-tenant-prefix = ["verify-client-cert"]
allow-duplicate-clientid = []

[dev-dependencies]
pretty_env_logger = "0.5.0"
config = "0.14"
pretty_assertions = "1.4.0"
