[package]
name = "rumqttd"
version = "0.19.0"
publish = true
description = "rumqttd is a high performance MQTT broker written in Rust which is light weight and embeddable"
keywords = ["mqtt", "broker", "iot", "kafka", "nats"]
categories = ["network-programming"]
rust-version = "1.70.0"
edition.workspace = true
repository.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
tokio = { workspace = true, features = ["rt", "time", "net", "io-util", "macros"]}
serde = { version = "1.0.196", features = ["derive"] }
bytes = { workspace = true, features = ["serde"] }
flume = { workspace = true, default-features = false, features = ["async"]}
slab = "0.4.9"
thiserror = { workspace = true }
tokio-util = { workspace = true, features = ["codec"], optional = true }
tokio-rustls = { workspace = true, optional = true }
tokio-native-tls = { workspace = true, optional = true }
rustls-webpki = { workspace = true, optional = true }
rustls-pemfile = { workspace = true, optional = true }
async-tungstenite = { workspace = true, default-features = false, features = ["tokio-runtime"], optional = true }
ws_stream_tungstenite = { workspace = true, default-features = false, features = ["tokio_io"], optional = true }
x509-parser = { version= "0.16", optional = true }
futures-util = { workspace = true, optional = true }
parking_lot = "0.12.1"
config = "0.15"
tracing = { version="0.1", features=["log"] }
tracing-subscriber = { version="0.3", features=["env-filter"] }
metrics = "0.24.1"
metrics-exporter-prometheus = { version = "0.16.0", default-features = false, features = ["http-listener"] }
clap = { version = "4.5", features = ["derive"] }
axum = "0.7"
rand = "0.8.5"
uuid = { version = "1.7.0", features = ["v4", "fast-rng"] }
subtle = "2.5"

[features]
default = ["use-rustls", "websocket"]
use-rustls = ["dep:tokio-rustls", "dep:rustls-webpki", "dep:rustls-pemfile", "dep:x509-parser"]
use-native-tls = ["dep:tokio-native-tls", "dep:x509-parser"]
websocket = ["dep:async-tungstenite", "dep:tokio-util", "dep:futures-util", "dep:ws_stream_tungstenite"]
verify-client-cert = []
validate-tenant-prefix = ["verify-client-cert"]
allow-duplicate-clientid = []

[dev-dependencies]
pretty_env_logger = "0.5.0"
pretty_assertions = "1.4.0"
