[package]
name = "rumqttdb"
version = "0.2.0"
authors = ["tekjar <raviteja@bytebeam.io>"]
edition = "2018"

[dependencies]
ureq = "2.4"
bytes = "1"
thiserror = "1"
url = "2.2"
rustls = "0.20"
webpki-roots = "0.22.3"
rustls-native-certs = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt"] }
sqlx = { version = "0.6", features = [ "runtime-tokio-rustls", "postgres", "chrono" ] }
enum_dispatch = "0.3.8"
flume = "0.10.9"
log = "0.4"
chrono = { version = "0.4", features = ["serde"]}

[dev-dependencies]
indoc = "1.0"
once_cell = "1"
serial_test = "*"