[package]
name = "rumqttlog"
version = "0.8.0"
authors = ["tekjar <raviteja@bytebeam.io>"]
edition = "2018"
license = "Apache-2.0"
keywords = ["mqtt", "iot", "kafka", "nats", "distributed"]
description = "kafka inspired rumqtt's mqtt commitlog"
repository = "https://github.com/bytebeamio/rumqtt/"

[dependencies]
byteorder = "1"
memmap = "0.7"
bytes = "1.0"
mqttbytes = { path = "../mqttbytes", version = "0.5" }
serde = { version = "1", features = ["derive", "rc"] }
segments = "0.1"
thiserror = "1"
log = "0.4"
fnv = "1"
jackiechan = "0.0.4"

[dev-dependencies]
argh = "0.1"
prost = "0.6"
pprof = { version = "0.3", features = ["flamegraph", "protobuf"] }
tempfile = "3"
pretty_assertions = "0.6"
rand = "0.7"
bencher = "0.1"
pretty_env_logger = "0.4"
futures-util = "0.3.5"

[[bench]]
name = "bench"
harness = false

