[package]
name = "rumqttmesh"
version = "0.1.0"
authors = ["tekjar <raviteja@bytebeam.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.3", features = ["full"] }
tokio-util = { version = "0.5", features = ["codec"]}
bytes = "0.6"
rumqttlog = "0.1"
