[package]
name = "rumqttmesh"
version = "0.1.0"
authors = ["tekjar <raviteja@bytebeam.io>"]
edition = "2018"
repository = "https://github.com/bytebeamio/rumqtt/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
bytes = "1"
rumqttlog = { path = "../rumqttlog" }
