[package]
name = "simplerouter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.1.0"
log = "0.4.14"
pretty_env_logger = "0.4.0"
thiserror = "1.0.30"
tokio = { version = "1.17.0", features = ["net", "sync", "rt-multi-thread", "io-util", "macros"] }
